; ModuleID = '/home/carl/AnghaBench/openwrt/package/kernel/gpio-button-hotplug/src/extr_gpio-button-hotplug.c_gpio_keys_polled_queue_work.c'
source_filename = "/home/carl/AnghaBench/openwrt/package/kernel/gpio-button-hotplug/src/extr_gpio-button-hotplug.c_gpio_keys_polled_queue_work.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gpio_keys_button_dev = type { i32, %struct.gpio_keys_platform_data* }
%struct.gpio_keys_platform_data = type { i32 }

@HZ = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.gpio_keys_button_dev*)* @gpio_keys_polled_queue_work to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gpio_keys_polled_queue_work(%struct.gpio_keys_button_dev* %0) #0 {
  %2 = alloca %struct.gpio_keys_button_dev*, align 8
  %3 = alloca %struct.gpio_keys_platform_data*, align 8
  %4 = alloca i64, align 8
  store %struct.gpio_keys_button_dev* %0, %struct.gpio_keys_button_dev** %2, align 8
  %5 = load %struct.gpio_keys_button_dev*, %struct.gpio_keys_button_dev** %2, align 8
  %6 = getelementptr inbounds %struct.gpio_keys_button_dev, %struct.gpio_keys_button_dev* %5, i32 0, i32 1
  %7 = load %struct.gpio_keys_platform_data*, %struct.gpio_keys_platform_data** %6, align 8
  store %struct.gpio_keys_platform_data* %7, %struct.gpio_keys_platform_data** %3, align 8
  %8 = load %struct.gpio_keys_platform_data*, %struct.gpio_keys_platform_data** %3, align 8
  %9 = getelementptr inbounds %struct.gpio_keys_platform_data, %struct.gpio_keys_platform_data* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i64 @msecs_to_jiffies(i32 %10)
  store i64 %11, i64* %4, align 8
  %12 = load i64, i64* %4, align 8
  %13 = load i64, i64* @HZ, align 8
  %14 = icmp uge i64 %12, %13
  br i1 %14, label %15, label %18

15:                                               ; preds = %1
  %16 = load i64, i64* %4, align 8
  %17 = call i64 @round_jiffies_relative(i64 %16)
  store i64 %17, i64* %4, align 8
  br label %18

18:                                               ; preds = %15, %1
  %19 = load %struct.gpio_keys_button_dev*, %struct.gpio_keys_button_dev** %2, align 8
  %20 = getelementptr inbounds %struct.gpio_keys_button_dev, %struct.gpio_keys_button_dev* %19, i32 0, i32 0
  %21 = load i64, i64* %4, align 8
  %22 = call i32 @schedule_delayed_work(i32* %20, i64 %21)
  ret void
}

declare dso_local i64 @msecs_to_jiffies(i32) #1

declare dso_local i64 @round_jiffies_relative(i64) #1

declare dso_local i32 @schedule_delayed_work(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
